[CORE-1450] SonarQube Issues - extending tests to get past SQ coverage issues